<resources>
    <string name="app_name">FoodHelb</string>

    <string name="slogan">With FoodHelb! eat better, even at the Helb</string>
    <string name="register">Register</string>
    <string name="signUp">Sign Up</string>
    <string name="dontHaveAnAccount">Don\'t Have An Account ?  </string>

    <string name="login">Login</string>
    <string name="fullName">Full name*</string>
    <string name="enterFullName">Enter Your Full Name</string>
    <string name="mail">Mail</string>
    <string name="forgotPassword">Forgot Password ?</string>
    <string name="password2">Password</string>
    <string name="chooseLanguage">Choose language</string>


    <string name="email">Email*</string>
    <string name="enterEmail">Enter Your Email</string>
    <string name="birthday">Date Of Birthday*</string>
    <string name="selectYourDOB">Select Your DOB</string>
    <string name="gender">Gender*</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="mobile">Mobile*</string>
    <string name="enterYourMobile">Enter Your Mobile</string>
    <string name="password">Password*</string>
    <string name="enterYourPassword">Enter Your Password</string>
    <string name="confirmPassword">Confirm Password*</string>
    <string name="confirmYourPassword">Confirm Your Password</string>

    <string name="searchAndOrder">Search and Order</string>
    <string name="orderNow">Order Now</string>
    <string name="searchYourFavouriteFood">Search Your Favourite Food</string>
    <string name="seeMoer">See More</string>
    <string name="upTo50Off">Up to 50% off</string>
    <string name="Dec15Jan12">Dec 15 - Jan 12</string>
    <string name="categories">Categories</string>
    <string name="recommended">Recommended</string>
    <string name="home">Home</string>
    <string name="profil">Profile</string>
    <string name="cart">Cart</string>
    <string name="map">Map</string>
    <string name="weather">Weather</string>
    <string name="wantToSearchForNewCity">Want To Search For New City</string>
    <string name="enterCityName">Enter City Name</string>

    <string name="deliveryText">Your order has been sent and will be processed as soon as possible.</string>

    <string name="uploadYourProfilePic">Upload your profile pic</string>
    <string name="choosePicture">CHOOSE PICTURE</string>
    <string name="upload">UPLOAD</string>
    <string name="title">Title</string>

    <string name="youCanUpdateYourProfile">You can update your profile details here!</string>
    <string name="name">Name*</string>
    <string name="updateProfilePic">UPDATE PROFILE PIC</string>
    <string name="updateEmail">UPDATE EMAIL</string>
    <string name="updateProfile">UPDATE PROFILE</string>
    <string name="addToCard">Add to Cart</string>
    <string name="totalPrice">Total Price</string>
    <string name="currentEmail">Current Email</string>
    <string name="enterYourEmail">Enter Your Email</string>
    <string name="newEmail">New Email*</string>
    <string name="enterYourNewEmail">Enter Your New Email</string>
    <string name="currentPwd">Current Password</string>
    <string name="newPwd">New Password*</string>
    <string name="enterYourNewPwd">Enter Your New Password</string>
    <string name="confirmPwd">Confirm Password*</string>
    <string name="confirmYourNewPwd">Confirm Your New Password</string>

    <string name="checkOut">Check Out</string>
    <string name="total">Total: </string>
    <string name="tax">Tax: </string>
    <string name="deliveryService">Delivery Services: </string>
    <string name="itemsTotal">Items Total: </string>
    <string name="myCart">My Cart</string>
    <string name="changePwd">CHANGE PASSWORD</string>



    <string name="youCanUpdateYourEmailAdressNow">You can Update your email adress now. Please enter your password and verify before continuie!</string>
    <string name="youCanChangeYourPassword">You can change your password now. Please enter your password and verify before continuie!</string>
    <string name="changeLanguage">Change Language</string>

    <string name="youCanDeleteYourProfileNow">You can delete you profile now. Please enter your password and verify before continue!</string>
    <string name="authenticate">AUTHENTICATE</string>
    <string name="deleteUser">DELETE USER</string>
    <string name="yourProfileIsNot">Your profile is not authenticated/verified yet!!</string>


    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_food">FoodActivity</string>


</resources>