<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_orange"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_register_head"
            android:textAlignment="center"
            android:text="@string/register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.155"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_register_full_name"
            android:layout_below="@id/textView_register_head"
            android:text="@string/fullName"
            android:padding="6dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="50dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_register_full_name"
            android:hint="@string/enterFullName"
            android:inputType="textPersonName"
            android:textSize="16sp"
            android:padding="6dp"
            android:background="@drawable/border"
            android:layout_below="@id/textView_register_full_name"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_register_email"
            android:layout_below="@id/editText_register_full_name"
            android:text="@string/email"
            android:padding="6dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_register_email"
            android:hint="@string/enterEmail"
            android:inputType="textEmailAddress"
            android:textSize="16sp"
            android:padding="6dp"
            android:background="@drawable/border"
            android:layout_below="@id/textView_register_email"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_register_dob"
            android:layout_below="@id/editText_register_email"
            android:text="@string/birthday"
            android:padding="6dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_register_dob"
            android:hint="@string/selectYourDOB"
            android:inputType="date"
            android:focusable="false"
            android:textSize="16sp"
            android:padding="6dp"
            android:background="@drawable/border"
            android:layout_below="@id/textView_register_dob"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_register_gender"
            android:layout_below="@id/editText_register_dob"
            android:text="@string/gender"
            android:padding="6dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/textView_register_gender"
            android:id="@+id/radio_group_register_gender">
            
            
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_female"
                android:text="@string/female"
                android:textSize="16sp"
                android:textColor="@color/white"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_male"
                android:text="@string/male"
                android:layout_marginLeft="20dp"
                android:textSize="16sp"
                android:textColor="@color/white"/>

        </RadioGroup>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_register_mobile"
            android:layout_below="@id/radio_group_register_gender"
            android:text="@string/mobile"
            android:padding="6dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_register_mobile"
            android:hint="@string/enterYourMobile"
            android:inputType="phone"
            android:textSize="16sp"
            android:padding="6dp"
            android:background="@drawable/border"
            android:layout_below="@id/textView_register_mobile"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_register_password"
            android:layout_below="@id/editText_register_mobile"
            android:text="@string/password"
            android:padding="6dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_register_password"
            android:hint="@string/enterYourPassword"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:padding="6dp"
            android:background="@drawable/border"
            android:layout_below="@id/textView_register_password"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_register_confirm_password"
            android:layout_below="@id/editText_register_password"
            android:text="@string/confirmPassword"
            android:padding="6dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_register_confirm_password"
            android:hint="@string/confirmYourPassword"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:padding="6dp"
            android:background="@drawable/border"
            android:layout_below="@id/textView_register_confirm_password"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnRegister"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_below="@id/editText_register_confirm_password"
            android:layout_marginTop="50dp"
            android:text="@string/register"/>


        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:elevation="10dp"
            android:visibility="gone"/>








    </RelativeLayout>

</ScrollView>