<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePasswordActivity"
    android:background="@color/light_gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_margin="15dp"
            android:background="@color/white">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_change_pwd_head"
                android:layout_marginTop="30dp"
                android:text="@string/youCanChangeYourPassword"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_update_change_pwd_current"
                android:layout_below="@id/textView_change_pwd_head"
                android:layout_marginTop="20dp"
                android:text="@string/currentPwd"
                android:padding="6dp"
                android:textColor="#555555"
                android:textSize="16sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText_change_pwd_current"
                android:layout_below="@id/textView_update_change_pwd_current"
                android:hint="@string/enterYourPassword"
                android:inputType="textPassword"
                android:padding="6dp"
                android:textSize="16sp"
                android:background="@drawable/border"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_change_pwd_authenticate"
                android:layout_below="@id/editText_change_pwd_current"
                android:layout_marginTop="10dp"
                android:text="Authenticate"
                android:layout_marginRight="70dp"
                android:layout_marginLeft="70dp"/>

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:elevation="10dp"
                android:visibility="gone"
                android:id="@+id/progressBar"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:padding="15dp"
            android:background="@color/white">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_change_pwd_authenticated"
                android:layout_marginTop="30dp"
                android:text="@string/yourProfileIsNot"
                android:padding="6dp"
                android:textColor="#555555"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_change_pwd_new"
                android:layout_below="@id/textView_change_pwd_authenticated"
                android:layout_marginTop="30dp"
                android:text="@string/newPwd"
                android:padding="6dp"
                android:textColor="#555555"
                android:textSize="16sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText_change_pwd_new"
                android:layout_below="@id/textView_change_pwd_new"
                android:hint="@string/enterYourNewPwd"
                android:inputType="textPassword"
                android:padding="6dp"
                android:textSize="16sp"
                android:background="@drawable/border"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_change_pwd_new_confirm"
                android:layout_below="@id/editText_change_pwd_new"
                android:layout_marginTop="10dp"
                android:text="@string/confirmPassword"
                android:padding="6dp"
                android:textColor="#555555"
                android:textSize="16sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText_change_pwd_new_confirm"
                android:layout_below="@id/textView_change_pwd_new_confirm"
                android:hint="@string/confirmYourNewPwd"
                android:inputType="textPassword"
                android:padding="6dp"
                android:textSize="16sp"
                android:background="@drawable/border"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_change_pwd"
                android:layout_below="@id/editText_change_pwd_new_confirm"
                android:layout_marginTop="10dp"
                android:text="@string/changePwd"
                android:layout_marginRight="70dp"
                android:layout_marginLeft="70dp"/>


        </RelativeLayout>
    </LinearLayout>

</ScrollView>