<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_orange"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/changeMyLang"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="97dp"
        android:layout_marginTop="135dp"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="540dp"
        android:text="@string/changeLanguage" />

    <LinearLayout
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <ImageView
                android:src="@drawable/logo1"
                android:layout_width="200dp"
                android:layout_height="200dp"/>

            <TextView
                android:gravity="center"
                android:id="@+id/txtSlogan"
                android:text="@string/slogan"
                android:textColor="@android:color/white"
                android:layout_width="200dp"
                android:layout_height="wrap_content"/>


        </LinearLayout>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="11dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/register"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:text="@string/login"
            android:textColor="@android:color/white" />
        <!--
        <Button
            android:id="@+id/changeMyLang"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/changeLanguage" />-->
        <!--        <Button
            android:id="@+id/btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/login"
            android:textColor="@android:color/white" />-->

    </LinearLayout>


</RelativeLayout>